Improved the design here and there

--- a/SimTECH/SimTECH/Components/MudCountrySelect.razor
+++ b/SimTECH/SimTECH/Components/MudCountrySelect.razor
@@ -1,6 +1,6 @@
 ﻿@inherits InputBase<Country>
 
-<MudSelect @bind-Value="HandleSelection" Label="Nations" Variant="Variant.Outlined" Class="@Class">
+<MudSelect @bind-Value="HandleSelection" Label="Nation" Variant="Variant.Outlined" Class="@Class">
     @ChildContent
     @foreach (var country in CountrySelectItems)
     {
