--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -48,7 +48,7 @@
                         {
                             <MudTd>
                                 <MudText Typo="Typo.caption">@(context.Optional.HasValue ? context.Optional.Value : "?")</MudText>
-                                </MudTd>
+                            </MudTd>
                         }
                         <MudTd>
                             <MudText Typo="Typo.caption">@context.Old</MudText>
@@ -68,7 +68,7 @@
                     </RowTemplate>
                 </MudTable>
             </MudPaper>
-            <MudPaper Class="pa-2" Width="225px">
+            <MudPaper Class="pa-2" Width="300px">
                 <MudStack>
                     <MudText Typo="Typo.h6">Settings</MudText>
                     <MudDivider />
@@ -94,7 +94,7 @@
                     </div>
                     <div>
                         <MudTooltip Text="Which aspect is going to be developed">
-                            <MudText Typo="Typo.subtitle1">Target</MudText>
+                            <MudText Typo="Typo.subtitle2">Target</MudText>
                         </MudTooltip>
                         <MudChipSet SelectedChipChanged="TargetChipChanged" Mandatory="true">
                             <MudChip Color="Color.Tertiary" Value="TargetDevelop.Main" Default="true">@_mainTypeName</MudChip>
@@ -114,10 +114,46 @@
                     </div>
                     @if (_selectedType == TypeDevelop.Range)
                     {
-                        <MudNumericField T="int" Label="Min" ValueChanged="ApplyMinRange" Class="field-sm" />
-                        <MudNumericField T="int" Label="Max" ValueChanged="ApplyMaxRange" Class="field-sm" />
+                        <div>
+                            <MudText Typo="Typo.subtitle2">Dev. range</MudText>
+                            <MudNumericField T="int" Label="Min" ValueChanged="ApplyMinRange" Class="field-sm" />
+                            <MudNumericField T="int" Label="Max" ValueChanged="ApplyMaxRange" Class="field-sm" />
+                        </div>
                     }
                 </MudStack>
+            </MudPaper>
+            <MudPaper Class="pa-2">
+                <MudText Typo="Typo.h6">Set dev. ranges</MudText>
+                <MudDivider />
+                
+                @if (League.DevelopmentRanges != null)
+                {
+                    <MudStack>
+                        @foreach (var rangeGroup in League.DevelopmentRanges.GroupBy(e => e.Type))
+                        {
+                            <MudText Typo="Typo.overline">@rangeGroup.Key</MudText>
+                            <MudSimpleTable>
+                                <thead>
+                                    <tr>
+                                        <th>Less than</th>
+                                        <th>Lower</th>
+                                        <th>Upper</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var range in rangeGroup)
+                                    {
+                                        <tr>
+                                            <td>@range.Comparer</td>
+                                            <td>@range.Minimum</td>
+                                            <td>@range.Maximum</td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </MudSimpleTable>
+                        }
+                    </MudStack>
+                }
             </MudPaper>
         </MudStack>
     }
@@ -156,7 +192,7 @@
             case Entrant.Driver: DevelopDrivers(); break;
             case Entrant.Team: DevelopTeams(); break;
             case Entrant.Engine: DevelopEngines(); break;
-            default: throw new InvalidOperationException("wtf is this");
+            default: throw new InvalidOperationException("wtf unexpected entrant added to develop?");
         }
 
         _activeEntrant = entrant;
