--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -3,7 +3,6 @@
 <MudDialog>
     <TitleContent>
         <MudText>
-            <MudIcon Icon="@Icons.Material.Filled.Add" Class="mr-3 mb-n1" />
             Driver moment
         </MudText>
     </TitleContent>
@@ -11,7 +10,7 @@
         <MudForm Model="@Model">
             <MudGrid>
                 <MudItem xs="8">
-                    <MudPaper Elevation="15" Class="pa-2">
+                    <MudPaper Elevation="15" Class="pa-2 mud-height-full">
                         <MudStack>
                             <MudStack Row="true" Spacing="4">
                                 <MudTextField T="string" @bind-Value="Model.FirstName" Label="First Name" Class="field-md" />
@@ -21,13 +20,16 @@
                             <MudDatePicker @bind-Date="@dateSetter" Editable="true" Label="Date of Birth" Class="field-md" />
                             <MudCountrySelect @bind-Value="Model.Country" Class="field-md" />
                             <MudTextField T="string" @bind-Value="Model.Biography" Label="Biography" Lines="5" />
+
+                            <MudText Typo="Typo.subtitle1">Toggles</MudText>
+                            <MudDivider />
                             <MudSwitchM3 @bind-Checked="Model.Alive" Label="Alive" Color="Color.Secondary" ThumbIcon="@Icons.Material.Filled.Done" ThumbOffIcon="@Icons.Material.Filled.Close" />
                         </MudStack>
                     </MudPaper>
                 </MudItem>
 
                 <MudItem xs="4">
-                    <MudPaper Elevation="15" Class="pa-2">
+                    <MudPaper Elevation="15" Class="pa-2 mud-height-full">
                         <MudText Typo="Typo.subtitle1">Traits</MudText>
                         <MudChipSet @bind-SelectedValues="selectedTraits" MultiSelection="true" Filter="true">
                             @foreach (var trait in Traits)
