Began implementing random trait assigner

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -160,6 +160,11 @@
                 }
             </MudPaper>
         </MudItem>
+        <MudItem>
+            <MudPaper>
+                Upcoming races from active leagues
+            </MudPaper>
+        </MudItem>
     </MudGrid>
 </MudContainer>
 
