--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -14,7 +14,7 @@
                         <MudStack>
                             <MudStack Row="true" Spacing="4">
                                 <MudTextField T="string" @bind-Value="Model.FirstName" Label="First Name" Class="field-md" />
-                                <MudTextField T="string" @bind-Value="Model.LastName" Label="Last Name" Class="field-md" OnKeyUp="AutoUpdateAbbreviation" />
+                                <MudTextField T="string" @bind-Value="Model.LastName" Label="Last Name" Class="field-md" OnKeyDown="AutoUpdateAbbreviation" />
                             </MudStack>
                             <MudTextField T="string" @bind-Value="Model.Abbreviation" Label="Abbreviation" Class="field-sm" />
                             <MudDatePicker @bind-Date="@dateSetter" Editable="true" Label="Date of Birth" Class="field-md" />
