--- a/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
@@ -2,7 +2,7 @@
 @inject SeasonEntrantService EntrantService
 @inject IDialogService DialogService
 
-<MudContainer>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
     <MudDataGrid T="SeasonDriver" Items="@SeasonDriverEntrants" Dense="true" Loading="@_loading" Class="my-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Drivers</MudText>
