Implemented the trait assigner in a very crude way (but it works!)

--- a/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
@@ -63,7 +63,7 @@
     [Parameter] public List<Climate> Climates { get; set; }
 
     private MudChip? climateChip;
-    private bool variableRaceLength { get; set; } = false;
+    private bool variableRaceLength { get; set; }
     private List<string> errorValidations = new();
 
     private EditRaceModel Model = new();
