--- a/SimTECH/SimTECH/Pages/Factors/Climates.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Climates.razor
@@ -1,6 +1,6 @@
 ﻿@page "/climates"
 @inject ClimateService _climateService
-@inject IDialogService DialogService
+@inject IDialogService _dialogService
 
 <MudContainer>
     <MudDataGrid T="Climate" Items="ClimateData">
@@ -20,6 +20,7 @@
             <PropertyColumn Property="e => e.EngineMultiplier" Title="Engine" />
             <PropertyColumn Property="e => e.ReliablityModifier" Title="Reliability" />
             <PropertyColumn Property="e => e.RngModifier" Title="RNG" />
+            <PropertyColumn Property="e => e.Odds" />
             <TemplateColumn T="Climate" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
@@ -51,7 +52,7 @@
 </MudContainer>
 
 @code {
-    List<Climate> ClimateData = new();
+    List<Climate> ClimateData;
 
     protected override async Task OnInitializedAsync()
     {
@@ -66,13 +67,13 @@
                 ["Climate"] = climate,
             };
 
-        var dialog = await DialogService.ShowAsync<ClimateEditor>("Modify climate", parameters);
+        var dialog = await _dialogService.ShowAsync<ClimateEditor>("Modify climate", parameters);
         var result = await dialog.Result;
 
         if (!result.Canceled && result.Data != null && result.Data is Climate updatedItem)
         {
             await _climateService.UpdateClimate(updatedItem);
-            ClimateData = await _climateService.GetClimates();
+            ClimateData = await _climateService.GetClimates(StateFilter.All);
         }
     }
 
