--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -13,7 +13,7 @@
                     <MudStack>
                         <MudText Typo="Typo.h4">Post race</MudText>
                         <MudText Typo="Typo.caption">Is there more info to show here?</MudText>
-                        <MudText>Sorry this page is quite unfinished, still. You can go to the standings though with a following button</MudText>
+                        <MudText Color="Color.Warning">Sorry this page is quite unfinished, still. You can go to the standings though with a following button</MudText>
                     </MudStack>
 
                     <MudSpacer />
